# bupt_rc_cv_fetch_data_v2

./: .gitignore  CMakeLists.txt  config.yaml  main.cpp  package.xml
include/: fetch_dataset.h
src/: fetch_dataset.cpp
